2006-05-10  Riccardo Mottola <riccardo@kaffe.org>

	* libraries/javalib/awt-implementations/kaffe/java/awt/Component.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/FocusEvt.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/List.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/RowCanvas.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/TextArea.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/event/FocusEvent.java:
	improved focus event and refactored some fields to match classpath

2006-05-06  Riccardo Mottola <riccardo@kaffe.org>

	* libraries/javalib/awt-implementations/kaffe/java/awt/FileDialog.java:
	solved NPE, made left pane display only topmost directory in path
	
2006-05-06  Riccardo Mottola <riccardo@kaffe.org>

	* libraries/javalib/awt-implementations/kaffe/java/awt/ScrollPaneAdjustable.java:
	removed, so to use classath

2006-05-05  Riccardo Mottola <riccardo@kaffe.org>

	* libraries/javalib/awt-implementations/kaffe/java/awt/Label.java:
	removed the painting of a border if label begun and ended with a space

2006-05-04  Riccardo Mottola <riccardo@kaffe.org>

	* libraries/javalib/awt-implementations/kaffe/java/awt/Canvas.java:
	commented out paint() implementation
	
2006-05-04  Riccardo Mottola <riccardo@kaffe.org>

	* libraries/clib/awt/X/fnt.c:
	fixed seriously broken charWidth implementation
	* libraries/javalib/awt-implementations/kaffe/java/awt/Defaults.java:
	changed default char back to Lucida

2006-05-02  Riccardo Mottola <riccardo@kaffe.org>

	* libraries/javalib/awt-implementations/kaffe/java/awt/Font.java:
	added deriveFont() stubs

2006-05-02  Riccardo Mottola <riccardo@kaffe.org>

	* libraries/javalib/awt-implementations/kaffe/java/awt/Component.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/Container.java:
	fixed Containder add() methods.

2006-04-26  Riccardo Mottola <riccardo@kaffe.org>

	* libraries/javalib/awt-implementations/kaffe/java/awt/LayoutManager.java,